comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Page Title</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso HTML5 com CSS3</h2>
+            <p>Texto relacionado ao curso de HTML5 e CSS3</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>Curso de JavaScrip</h2>
+            <p>Texto relacionado ao curso de JavaScript</p>
         </article>
     </main>
 </body>
